--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,44 @@
+html
 body {
-  font-size:16px;
-  line-height:30px;
-  color:black;
-  font-weight:medium;
-  font-family:Roboto;
+  min-width:1440px;
+  min-height:2476px;
+  margin: 0;
+  padding: 0;
 }
-.type {
-  font-size:16px;
-  line-height:20px;
-  color:black;
-  font-weight:regular;
-  font-family:Roboto;
+.main-header {
+  min-height: 115px;
+  box-shadow: 0 0 0 3px green;
 }
-.sort {
-  font-size:14px;
-  line-height:18px;
-  color:black;
-  font-weight:regular;
-  font-family:Roboto;
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.container {
+  width: 1160px;
+  min-height: 115px;
+  margin: 0 auto;
+  box-shadow: 0 0 0 3px yellow;
+}
+
+.small-logo {
+  width: 160px;
+  min-height: 115px;
+  box-shadow: 0 0 0 3px blue;
+}
+
+.main-navigation {
+  width: 800px;
+  min-height: 115px;
+  float: left;
+  box-shadow: 0 0 0 3px pink;
+}
+
+.user-block{
+  width: 130px;
+  min-height: 115px;
+  float: left;
+  box-shadow: 0 0 0 3px orange;
 }
