--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 html
 body {
   width:1440px;
-  height:3214px;
   font-weight:400;
   font-size: 16px;
   line-height: 24px;
@@ -370,19 +369,21 @@ sup{
   vertical-align: middle;
   text-align: center;
 }
-.works__item:after {
+.works__item::after {
   content: " ";
   position:absolute;
-  border-width:2px;
+  border-width:1px;
   border-style:solid;
   border-color:#eeeeee;
   width: 0px;
   height:52px;
-  margin-right: 50px;
+  right:-20px;
+  top:62px;
 }
-.works__item::after:last-child {
+.works a:last-child .works__item::after {
   display:none;
 }
+
 .main-footer {
   min-width:1440px;
   min-height:570px;
@@ -565,13 +566,14 @@ sup{
 
 form {
   width: 260px;
-  min-height: 787px;
+  min-height: 730px;
   box-shadow: 0 0 0 1px pink;
   float:left;
 }
 
 .range-filter {
-  width: 240px;
+  width: 260px;
+  margin-bottom:20px;
 }
 .range-controls {
   position: relative;
@@ -610,7 +612,7 @@ form {
 }
 
 .range-controls .toggle-max {
-  left: 145px;
+  left: 160px;
 }
 .price-controls {
   font-size: 0;
@@ -624,38 +626,80 @@ form {
   text-align: right;
 }
 .price-controls input {
-  font-family: 'Roboto', 'Arial', sans-serif;
   font-size: 16px;
   width: 60px;
   margin-left: 10px;
-  padding: 8px 10px;
+  padding: 10px 10px;
   text-align: center;
   color: #283136;
   border: none;
   border-radius: 5px;
   background: #f1f1f1;
 }
+ .type p,
+ .special p{
+  font-size: 18px;
+  line-height:30px;
+  text-transform:uppercase;
+  font-weight:bold;
+ }
+
+input {
+  font-size:16px;
+  line-height:20px;
+  margin-bottom:30px;
+}
+button {
+  display:block;
+  width:260px;
+  padding:15px 0;
+  margin-top: 35px;
+  font-size:16px;
+  line-height:18px;
+  color:black;
+  text-transform:uppercase;
+  text-align:center;
+  text-decoration:none;
+  font-weight:bold;
+  background:#eeeeee;
+}
 
 .products_catalog {
   width: 760px;
-  min-height: 1925px;
+  min-height: 2043px;
+  float:left;
+  margin-left:140px;
+  margin-bottom: 15px;
   box-shadow: 0 0 0 1px blue;
-  float:right;
-  margin-left: 120px;
-  margin-top: 60px;
 }
-.products__item {
+.products__item-sedona,
+.products__item-pink,
+.products__item-barbershop,
+.products__item-mishka,
+.products__item-a-plus,
+.products__item-kvast {
   width: 360px;
-  min-height: 619px;
-  box-shadow: 0 0 0 1px pink;
+  height:617px;
   float:left;
-  margin-right: 40px;
+  margin-right:15px;
+  margin-bottom: 36px;
+  box-shadow: 0 0 0 1px pink;
 }
-
 .page-number {
-  width: 444px;
-  min-height: 48px;
+  width: 445px;
+  min-height:53px;
   float:left;
-  margin-left: 420px;
+  margin-top: 20px;
   box-shadow: 0 0 0 1px pink;
+}
+.page-number a{
+  font-size:16px;
+  line-height:18px;
+  color:black;
+  text-decoration:none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-transform:uppercase;
+  font-weight:bold;
 }
